Fixed issues with text wrapping

--- a/styles.css
+++ b/styles.css
@@ -191,17 +191,19 @@ a, a:hover {
 .project {
     display: flex; 
     width: 75vw;
-    height: 500px;
+    min-height: 500px;
+    height: auto;
     background-color: black;
     box-shadow: 0 0 30px rgba(0, 0, 0, 1);
+    word-wrap: break-word;
 }
 
 .project-image {
     display: flex;
     width: 60%;
-    height: 400px;
     margin: 50px 0px 50px 50px;
     gap: 10px;
+    
 }
 
 .project-image img {
@@ -228,25 +230,14 @@ a, a:hover {
 #chase-the-fun-img-container {
     flex-direction: column;
     flex-wrap: wrap;
-    width: 100%;
-    gap: 10px;
 }
 
 #chase-the-fun-img-container img {
     width: 100%;
 }
 
-#chase-the-fun-img1 {
-    max-height: 300px;
-}
-
-#chase-the-fun-img2 {
-    max-height: 100px;
-}
-
 .project-info {
     width: 40%;
-    height: 400px;
     margin: 50px 50px 0px 50px;
 }
 
